--- a/AULA 7/style.css
+++ b/AULA 7/style.css
@@ -5,8 +5,8 @@
 }
 
 body{
-background-image: linear-gradient(to bottom,#0fc2bf,#005c5a);
-height: 100%;
+    background-image: linear-gradient(to bottom,#0fc2bf,#005c5a);
+    height: 100%;
 }
 main{
     background-color: rgba(255, 255, 255, 0.589);
@@ -19,11 +19,12 @@ main{
 h1{
     color: #6369D1;
     text-align: center;
- text-shadow:1px 1px 1px #3c3f7e ;
+    text-shadow:1px 1px 1px #3c3f7e ;
 
 }
-h2{color: #6369D1;
-text-align: center;
+h2{
+    color: #6369D1;
+    text-align: center;
 }
 p{
     text-align: justify;
