--- a/Capitulo-17/style.css
+++ b/Capitulo-17/style.css
@@ -38,7 +38,9 @@ paleta de verde
     padding: 0px;
 }
 
-
+abbr{
+    text-decoration:underline;
+}
 
 body{
     background-color:var(--cor0);
@@ -203,7 +205,7 @@ aside h3{
 
 aside ul{
     list-style-type:'\2714\00A0\00A0'; /*emoji check -espaço-espaço*/
-    list-style-position: inside;
+    list-style-position:inside;
     columns: 2;
 }
 footer{
